2009-12-03  Craig Howland <howland@LGSInnovations.com>

	* libc/stdlib/strtod.c:  Correct "NO_REENT" to "_REENT_ONLY".
	* libc/stdlib/wcstod.c:  Ditto.
	* libc/stdlib/dtoastub.c:  Ditto.

2009-11-23  Corinna Vinschen  <corinna@vinschen.de>

	Use NetBSD fix for CVE-2009-0689 security vulnerability.
	* libc/include/sys/reent.h (_Kmax): Define here based on the sizeof
	size_t, as in latest NetBSD.
	* libc/reent/reent.c (_reclaim_reent): Use _Kmax rather than constant
	value 15.
	* libc/stdlib/mprec.c (_Kmax): Don't define here.  Explain why.

2009-11-20  Nick Clifton  <nickc@redhat.com>

	* libc/machine/rx/strncat.S (_strncat): Replace use of r6
	(call-saved) with r14 (call-used).

2009-11-18  Dave Korn  <dave.korn.cygwin@googlemail.com>

	* libm/machine/i386/f_tan.S (_f_tan): Free fp stack register
	containing useless constant before advancing fp sp over it.
	(_f_tanf): Likewise.

2009-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/vfprintf.c: Include ../stdlib/local.h.  Replace call to
	_mbtowc_r with direct call to __mbtowc.
	* libc/stdio/vfscanf.c: Ditto.
	* libc/stdlib/btowc.c: Include local.h.  Replace call to _mbtowc_r
	with direct call to __mbtowc.
	* libc/stdlib/mblen.c: Ditto.
	* libc/stdlib/mblen_r.c: Ditto.
	* libc/stdlib/mbrtowc.c: Ditto.
	* libc/stdlib/mbstowcs_r.c: Ditto.
	* libc/stdlib/mbtowc.c: Ditto.
	* libc/stdlib/wcrtomb.c: Include local.h.  Replace call to _wctomb_r
	with direct call to __wctomb.
	* libc/stdlib/wcsnrtombs.c: Ditto.
	(_wcsnrtombs_r): Ditto.
	* libc/stdlib/wcstombs_r.c: Ditto.
	* libc/stdlib/wctob.c: Ditto.
	* libc/stdlib/wctomb.c: Ditto.

	* libc/stdlib/mbrtowc.c (mbrtowc): Implement independently from
	_mbrtowc_r, unless PREFER_SIZE_OVER_SPEED or __OPTIMIZE_SIZE__ are
	defined.
	* libc/stdlib/wcrtomb.c (wcrtomb): Implement independently from
	_wcrtomb_r, unless PREFER_SIZE_OVER_SPEED or __OPTIMIZE_SIZE__ are
	defined.

	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Drop unnecessary test for
	ch >= 0.
